chore: address Sonar issues post-nullness