@@ -2,14 +2,13 @@ package ai.timefold.solver.core.impl.score.stream.common;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
+import java.util.List;
 
 import ai.timefold.solver.core.api.domain.entity.PlanningEntity;
 import ai.timefold.solver.core.api.score.buildin.simple.SimpleScore;
 import ai.timefold.solver.core.api.score.stream.Constraint;
 import ai.timefold.solver.core.api.score.stream.ConstraintFactory;
 import ai.timefold.solver.core.api.score.stream.ConstraintProvider;
-import ai.timefold.solver.core.api.score.stream.ConstraintStreamImplType;
 import ai.timefold.solver.core.api.solver.Solver;
 import ai.timefold.solver.core.api.solver.SolverFactory;
 import ai.timefold.solver.core.config.constructionheuristic.ConstructionHeuristicPhaseConfig;
@@ -27,8 +26,8 @@ public abstract class AbstractFactChangePropagationTest {
 
     private final Solver<TestdataShadowingChainedSolution> solver;
 
-    protected AbstractFactChangePropagationTest(ConstraintStreamImplType constraintStreamImplType) {
-        this.solver = buildSolver(constraintStreamImplType);
+    protected AbstractFactChangePropagationTest() {
+        this.solver = buildSolver();
     }
 
     /**
@@ -36,28 +35,26 @@ public abstract class AbstractFactChangePropagationTest {
      */
     @Test
     void delayedFactChangePropagation() {
-        TestdataShadowingChainedEntity entity = new TestdataShadowingChainedEntity("e1");
-        TestdataShadowingChainedAnchor value = new TestdataShadowingChainedAnchor(VALUE_CODE);
-        TestdataShadowingChainedSolution inputProblem = new TestdataShadowingChainedSolution();
-        inputProblem.setChainedAnchorList(Arrays.asList(value));
-        inputProblem.setChainedEntityList(Arrays.asList(entity));
+        var entity = new TestdataShadowingChainedEntity("e1");
+        var value = new TestdataShadowingChainedAnchor(VALUE_CODE);
+        var inputProblem = new TestdataShadowingChainedSolution();
+        inputProblem.setChainedAnchorList(List.of(value));
+        inputProblem.setChainedEntityList(List.of(entity));
 
-        TestdataShadowingChainedSolution solution = solver.solve(inputProblem);
-        TestdataShadowingChainedEntity solvedEntity = solution.getChainedEntityList().get(0);
+        var solution = solver.solve(inputProblem);
+        var solvedEntity = solution.getChainedEntityList().get(0);
         assertThat(solvedEntity.getChainedObject()).isNotNull();
         assertThat(solvedEntity.getAnchor().getCode()).isEqualTo(VALUE_CODE);
         assertThat(solution.getScore().isFeasible()).isTrue();
     }
 
-    private Solver<TestdataShadowingChainedSolution> buildSolver(ConstraintStreamImplType constraintStreamImplType) {
-        SolverConfig solverConfig = new SolverConfig()
+    private Solver<TestdataShadowingChainedSolution> buildSolver() {
+        var solverConfig = new SolverConfig()
                 .withEntityClasses(TestdataShadowingChainedEntity.class)
                 .withSolutionClass(TestdataShadowingChainedSolution.class)
                 .withConstraintProviderClass(ChainedEntityConstraintProvider.class)
                 .withPhases(new ConstructionHeuristicPhaseConfig());
-        solverConfig.getScoreDirectorFactoryConfig().setConstraintStreamImplType(constraintStreamImplType);
-
-        SolverFactory<TestdataShadowingChainedSolution> solverFactory = SolverFactory.create(solverConfig);
+        var solverFactory = SolverFactory.<TestdataShadowingChainedSolution> create(solverConfig);
         return solverFactory.buildSolver();
     }
 
